# CivicAI-V2

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: achat_immobilier.txt  assurance_sante.txt  compte_bancaire.txt  creation_entreprise.txt  fiscalite_impots.txt  livret_jaune.txt  mariage_thailande.txt  permis_conduire.txt  permis_reentree.txt  rapport_90_jours.txt  tm30_notification.txt  visa_dtv.txt  visa_etudiant.txt  visa_ltr.txt  visa_mariage.txt  visa_non_b.txt  visa_retraite.txt  voyage_animaux.txt
evals/: check_groundtruth.py  dataset.jsonl  p4_validate.py  persist_top_scores.py  runner.py  scorer.py  sweep.py
evals/runs/: p3b_report_20260531-213517.md  p3b_report_20260601-141249.md  p3c_sweep.csv  p3c_sweep_report_20260601-134001.md
scripts/: ingest.py
src/civicai/: __init__.py  config.py
src/civicai/agent/: graph.py  nodes.py  state.py
src/civicai/api/: app.py  routes.py  schemas.py
src/civicai/llm/: client.py
src/civicai/rag/: embeddings.py  ingest.py  reranker.py  retrieval.py  vectorstore.py
src/civicai/tools/: definitions.py  dispatcher.py  search_docs.py  web_search.py
tests/: conftest.py  test_api_smoke.py  test_chunking.py  test_config.py  test_embeddings.py  test_reranker.py  test_routing.py
