[project]
name = "civicai"
version = "0.2.0"
description = "LangGraph agent + hybrid RAG assistant for Thai administrative procedures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.93.0",
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.0",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
]

[project.scripts]
civicai-ingest = "civicai.rag.ingest:ingest_all_docs"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civicai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"
