[project]
name = "civicai"
version = "0.2.0"
description = "LangGraph agent + hybrid RAG assistant for Thai administrative procedures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.93.0",
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.4.0",
    "tavily-python>=0.7.23",
    # explicit torch entry so the [tool.uv.sources] CPU-only index is honored
    # (sentence-transformers depends on torch transitively; declaring it here
    # lets uv route the resolution through the CPU wheels index below).
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
civicai-ingest = "civicai.rag.ingest:ingest_all_docs"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civicai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"

# CPU-only torch: bge-m3 and the reranker run inference on CPU here; the
# default torch wheel bundles ~5 GB of CUDA runtime which is dead weight.
# Route torch through PyTorch's CPU wheel index to drop nvidia-* deps.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
